2005-04-20  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/news.ihtml (NOTE): announce 2.5.20

2005-04-20  Jan Nieuwenhuizen  <janneke@gnu.org>

	* GNUmakefile (WEBSERVER): That's now lilypond.org.

	* site/devel/packaging.html: Update package dependencies.  Add yum
	for Fedora.

2005-04-18  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/switch/index.html: 9 years ago already.

	* site/install/macos.html (href): link to Libero Mureddu's
	tutorial.

2005-04-16  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/contact.ihtml: Add translation header with revision marker.

2005-04-16  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/install/index.html: add 2.4.6

2005-04-14  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/install/older-versions.html: remove versions no longer
	available.

2005-04-13  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/install/older-versions.html: remove 1.8 RH9 lilypond.org
	and ccrma links

2005-04-07  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scripts/format-page.py (grab_ihtml): Do first.  Fixes @DOC@
	links in contact.ihtml.

2005-04-06  Jan Nieuwenhuizen  <jan.nieuwenhuizen@aspiratie.nl>

	* site/about/automated-engraving/schubert.html (href): Fix link.

2005-04-05  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/index.html: Name 2.2 old, 2.0 ancient.

2005-04-05  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/documentation.html: idem.

	* site/about/index.html: use contact.ihtml

	* site/contact.ihtml: new file.

	* site/about/index.html: use <dl>

2005-04-05  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/about/faq.html (href): Fix link.  Add close tags,
	indent-region.

	* site/search-noscript.html: 
	* site/search.html: Resurrect page.

	* site/index.html: Add link.

	* site/old-news.html (href): Fix link.

2005-04-01  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/install/index.html: Fix officciallogo, use strong iso bold.

	* site/install/older-versions.html: New file.  Retrieve from
	google cache.
